--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-native/eslint-config": "0.75.1",
     "@react-native/metro-config": "0.75.1",
     "@react-native/typescript-config": "0.75.1",
+    "@testing-library/react-native": "^12.6.0",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
